--- a/index.html
+++ b/index.html
@@ -7,159 +7,210 @@
     <link href="css/main.css" rel="stylesheet"><link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&amp;subset=latin-ext,vietnamese" rel="stylesheet">
   </head>
   <body>
-    <audio id="menuSound" controls="" hidden="hidden"><source src="sound/menu.mp3" type="audio/mpeg"></audio>
     <div class="wrap">
-      <div class="line"> 
-        <ul>
-          <li></li>
-          <li></li>
-          <li> </li>
-          <li></li>
-          <li></li>
-          <li> </li>
-          <li></li>
-        </ul>
-      </div>
-      <header class="header"> 
-        <div class="header_top">
-          <div class="container"> 
-            <div class="avatar"><span>Tan</span></div>
-            <nav class="nav"> 
-              <ul> 
-                <li><a href="#top" title="title">Home</a></li>
-                <li><a href="#about" title="title">About</a></li>
-                <li><a href="#works" title="title">Works</a></li>
-              </ul>
-            </nav>
+      <audio id="menuSound" controls="" hidden="hidden"><source src="sound/menu.mp3" type="audio/mpeg"></audio>
+      <div class="wrap_inner">
+        <div class="wrap_home">
+          <div class="line"> 
+            <ul>
+              <li></li>
+              <li></li>
+              <li> </li>
+              <li></li>
+              <li></li>
+              <li> </li>
+              <li></li>
+            </ul>
           </div>
-        </div>
-      </header>
-      <!-- end header-->
-      <div id="top"></div>
-      <div class="section banner">
-        <div class="header_bar">
-          <div class="container"> 
-            <div class="cf">
-              <div class="header_icon"> <span></span><span></span><span></span></div>
-              <div class="header_btn"><a class="btn" href="#" title="title">Contact me! </a></div>
-            </div>
-          </div>
-        </div>
-        <div class="container"> 
-          <div class="row">
-            <div class="wrap_text col-6 col">
-              <div class="text text_1"><span>Tan</span></div>
-              <div class="text text_2"><span>20<span style="color: #06a862">17</span></span></div>
-            </div>
-            <div class="banner_intro col-6 col">
-              <div class="avatar wow bounceInUp">
-                <div class="img"> <span>Tan</span></div>
+          <header class="header"> 
+            <div class="header_top">
+              <div class="container"> 
+                <div class="avatar"><span>Tan</span></div>
+                <nav class="nav"> 
+                  <ul> 
+                    <li><a href="#top" title="title">Home</a></li>
+                    <li><a href="#about" title="title">About</a></li>
+                    <li><a href="#works" title="title">Works</a></li>
+                  </ul>
+                </nav>
               </div>
-              <p>Hello nice people !<br> Wellcome on my portfolio, I hope you will enjoy, cheers!</p>
-              <ul> 
-                <li><a href="#" title="title"> <span class="icon-mail"> </span></a></li>
-                <li><a href="#" title="title"> <span class="icon-skype"> </span></a></li>
-                <li><a href="#" title="title"> <span class="icon-phone"> </span></a></li>
-              </ul>
             </div>
-          </div>
-        </div>
-      </div>
-      <div class="down wow slideInUp"><img src="img/btn-scroll-arrow.svg" alt=""></div>
-      <div class="section about" id="about">
-        <div class="container"> 
-          <div class="about_inner wow slideInUp">
-            <div class="cirle"></div>
-            <div class="row"> 
-              <div class="col col-6 about_left">
-                <div class="section_title">
-                  <h3>About</h3>
+          </header>
+          <!-- end header-->
+          <div id="top"></div>
+          <div class="section banner">
+            <div class="header_bar">
+              <div class="container"> 
+                <div class="cf">
+                  <div class="header_icon"> <span></span><span></span><span></span></div>
+                  <div class="header_btn"><a class="btn" href="#" title="title">Contact me! </a></div>
                 </div>
-                <h4>Dao Duy Tan</h4><span>22 - 12 - 1990</span>
               </div>
-              <div class="col col-6 about_right">
-                <div class="about_intro"> 
-                  <h4>Intro</h4>
-                  <p>Hi. I'm Tan, is a front-end developer.</p>
-                  <p>I'm living in Ho Chi Minh City. I am very interested in the program and the nice website so I chose the Front-end. With Front-end, you will be a "painter" really, you creative freedom to create the "painting" with html, css, javascript.</p>
-                  <p> It is interesting. </p>
+            </div>
+            <div class="container"> 
+              <div class="row">
+                <div class="wrap_text col-6 col">
+                  <div class="text text_1"><span>Tan</span></div>
+                  <div class="text text_2"><span>20<span style="color: #06a862">17</span></span></div>
                 </div>
-                <div class="about_skill">
-                  <h4>Skill</h4>
-                  <ul>
-                    <li> 
-                      <h5>SOFTWARE DESIGN (PS + AI)</h5>
-                      <div class="skill_bar" data-value="60"><span></span></div>
-                    </li>
-                    <li> 
-                      <h5>HTML - CSS</h5>
-                      <div class="skill_bar" data-value="90"><span></span></div>
-                    </li>
-                    <li> 
-                      <h5>JAVASCRIPT</h5>
-                      <div class="skill_bar" data-value="70"><span></span></div>
-                    </li>
-                    <li> 
-                      <h5>UI - UX</h5>
-                      <div class="skill_bar" data-value="50"><span></span></div>
-                    </li>
+                <div class="banner_intro col-6 col">
+                  <div class="avatar wow bounceInUp">
+                    <div class="img"> <span>Tan</span></div>
+                  </div>
+                  <p>Hello nice people !<br> Wellcome on my portfolio, I hope you will enjoy, cheers!</p>
+                  <ul> 
+                    <li><a href="mailto:daoduytan2212@gmail.com"> <span class="icon-mail"> </span></a></li>
+                    <li><a href="skype:daoduytan2212?chat"> <span class="icon-skype"> </span></a></li>
+                    <li><a href="tel:+84969 811 549"> <span class="icon-phone"> </span></a></li>
                   </ul>
                 </div>
-                <div class="about_company">
-                  <h4>Company</h4>
-                  <div class="img"><img src="img/company.png" alt=""></div>
-                </div>
               </div>
             </div>
-            <div><a class="btn" href="#" title="title">My CV </a></div>
+          </div>
+          <div class="down wow slideInUp"><img src="img/btn-scroll-arrow.svg" alt=""></div>
+          <div class="section about" id="about">
+            <div class="container"> 
+              <div class="about_inner wow slideInUp">
+                <div class="cirle"></div>
+                <div class="row"> 
+                  <div class="col col-6 about_left">
+                    <div class="section_title">
+                      <h3>About</h3>
+                    </div>
+                    <h4>Dao Duy Tan</h4><span>22 - 12 - 1990</span>
+                  </div>
+                  <div class="col col-6 about_right">
+                    <div class="about_intro"> 
+                      <h4>Intro</h4>
+                      <p>Hi. I'm Tan, is a front-end developer.</p>
+                      <p>I'm living in Ho Chi Minh City. I am very interested in the program and the nice website so I chose the Front-end. With Front-end, you will be a "painter" really, you creative freedom to create the "painting" with html, css, javascript.</p>
+                      <p> It is interesting. </p>
+                    </div>
+                    <div class="about_skill">
+                      <h4>Skill</h4>
+                      <ul>
+                        <li> 
+                          <h5>SOFTWARE DESIGN (PS + AI)</h5>
+                          <div class="skill_bar" data-value="60"><span></span></div>
+                        </li>
+                        <li> 
+                          <h5>HTML - CSS</h5>
+                          <div class="skill_bar" data-value="90"><span></span></div>
+                        </li>
+                        <li> 
+                          <h5>JAVASCRIPT</h5>
+                          <div class="skill_bar" data-value="70"><span></span></div>
+                        </li>
+                        <li> 
+                          <h5>UI - UX</h5>
+                          <div class="skill_bar" data-value="50"><span></span></div>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="about_company">
+                      <h4>Company</h4>
+                      <div class="img"><img src="img/company.png" alt=""></div>
+                    </div>
+                  </div>
+                </div>
+                <div><a class="btn" href="#" title="title">My CV </a></div>
+              </div>
+            </div>
+          </div>
+          <!-- end intro -->
+          <div class="down wow slideInUp"><img src="img/btn-scroll-arrow.svg" alt=""></div>
+          <div class="section works_recent" id="works">
+            <div class="container"> 
+              <div class="section_title text-center">
+                <h3>Recent works<br></h3>
+              </div>
+              <div class="works"> 
+                <div class="work wow slideInUp"><a href="http://32dentalstudio.com" target="_blank">
+                    <div class="mockup" style="background-image:url(img/works/32.jpg"></div>
+                    <h3 class="namWork wow slideInLeft">32dentalstudio</h3><span class="letter" style="color: rgba(104, 14, 52, 0.9)">3</span></a></div>
+                <div class="work wow slideInUp"><a href="https://boligsurf.dk">
+                    <div class="mockup" style="background-image:url(img/works/bo.jpg"></div>
+                    <h3 class="namWork wow slideInLeft">BOLIGSURF</h3><span class="letter" style="color: rgba(32, 141, 99, 0.9)">b</span></a></div>
+                <div class="work wow slideInUp"><a href="http://geo.sa">
+                    <div class="mockup" style="background-image:url(img/works/geo.jpg"></div>
+                    <h3 class="namWork wow slideInLeft">geo.sa</h3><span class="letter" style="color: rgba(245, 86, 31, 0.9)">g</span></a></div>
+                <div class="work wow slideInUp"><a href="https://huydong.com">
+                    <div class="mockup" style="background-image:url(img/works/huydong.jpg"></div>
+                    <h3 class="namWork wow slideInLeft">huydong.com</h3><span class="letter" style="color: rgba(39, 146, 111, 0.9)">h</span></a></div>
+                <div class="work wow slideInUp"><a href="http://thelifepill.org">
+                    <div class="mockup" style="background-image:url(img/works/life.jpg"></div>
+                    <h3 class="namWork wow slideInLeft">lifepilllaboratories</h3><span class="letter" style="color: rgba(219, 10, 22, 0.9)">l</span></a></div>
+              </div>
+            </div>
+            <div class="text-center" style="margin-bottom: 100px"><a class="btn" href="#">View more </a></div>
+            <div class="allWorks"> 
+              <div class="allWorks_slider">
+                <div class="work-item" style="background-image:url(img/works/huydong.jpg"><a href="http://lntpartners.com" target="_blank"><span>lntpartners.com</span>
+                    <div class="color" style="background: rgba(174, 35, 40, .2)"></div><strong style="color: rgba(174, 35, 40, .9)">l</strong></a></div>
+                <div class="work-item" style="background-image:url(img/works/life.jpg"><a href="http://www.tpauk.com" target="_blank"><span>tpauk.com</span>
+                    <div class="color" style="background: rgba(0, 103, 102, .2)"></div><strong style="color: rgba(0, 103, 102, .9)">t</strong></a></div>
+                <div class="work-item" style="background-image:url(img/works/geo.jpg"><a href="http://lntpartners.com" target="_blank"><span>sanskritiarts.ca</span>
+                    <div class="color" style="background: rgba(235, 3, 41, .2)"></div><strong style="color: rgba(235, 3, 41, .9)">s</strong></a></div>
+                <div class="work-item"><a href="http://www.totallyguitars.com" target="_blank"><span>totallyguitars.com</span>
+                    <div class="color" style="background: rgba(111, 48, 74, .2)"></div><strong style="color: rgba(11, 48, 74, .9)">t</strong></a></div>
+                <div class="work-item"><a href="http://nafas.org.uk" target="_blank"><span>nafas.org.uk</span>
+                    <div class="color" style="background: rgba(194, 211, 108, .2)"></div><strong style="color: rgba(194, 211, 108, .9)">n</strong></a></div>
+                <div class="work-item"><a href="http://cre8uk.co" target="_blank"><span>cre8uk.co</span>
+                    <div class="color" style="background: rgba(20, 73, 144, .2)"></div><strong style="color: rgba(20, 73, 144, .9)">c</strong></a></div>
+                <div class="work-item" style="background-image:url(img/works/huydong.jpg"><a href="http://lntpartners.com" target="_blank"><span>lntpartners.com</span>
+                    <div class="color" style="background: rgba(174, 35, 40, .2)"></div><strong style="color: rgba(174, 35, 40, .9)">l</strong></a></div>
+                <div class="work-item" style="background-image:url(img/works/life.jpg"><a href="http://www.tpauk.com" target="_blank"><span>tpauk.com</span>
+                    <div class="color" style="background: rgba(0, 103, 102, .2)"></div><strong style="color: rgba(0, 103, 102, .9)">t</strong></a></div>
+                <div class="work-item" style="background-image:url(img/works/geo.jpg"><a href="http://lntpartners.com" target="_blank"><span>sanskritiarts.ca</span>
+                    <div class="color" style="background: rgba(235, 3, 41, .2)"></div><strong style="color: rgba(235, 3, 41, .9)">s</strong></a></div>
+                <div class="work-item"><a href="http://www.totallyguitars.com" target="_blank"><span>totallyguitars.com</span>
+                    <div class="color" style="background: rgba(111, 48, 74, .2)"></div><strong style="color: rgba(11, 48, 74, .9)">t</strong></a></div>
+                <div class="work-item"><a href="http://nafas.org.uk" target="_blank"><span>nafas.org.uk</span>
+                    <div class="color" style="background: rgba(194, 211, 108, .2)"></div><strong style="color: rgba(194, 211, 108, .9)">n</strong></a></div>
+                <div class="work-item"><a href="http://cre8uk.co" target="_blank"><span>cre8uk.co</span>
+                    <div class="color" style="background: rgba(20, 73, 144, .2)"></div><strong style="color: rgba(20, 73, 144, .9)">c</strong></a></div>
+              </div>
+            </div>
+          </div>
+          <div class="footer footer wow slideInUp">
+            <div class="footer_top">
+              <div class="container"> </div>
+            </div>
+            <div class="footer_bottom">
+              <div class="container"> 
+                <ul> 
+                  <li><a href="#top" title="title">Home</a></li>
+                  <li><a href="#about" title="title">About</a></li>
+                  <li><a href="#works" title="title">Works</a></li>
+                  <li><a href="#top" title="title">Top</a></li>
+                </ul>
+                <div class="avatar"><span>Tan</span></div>
+                <p>©2017</p>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
-      <!-- end intro -->
-      <div class="down wow slideInUp"><img src="img/btn-scroll-arrow.svg" alt=""></div>
-      <div class="section works_recent" id="works">
-        <div class="container"> 
-          <div class="section_title text-center">
-            <h3>Recent works<br></h3>
-          </div>
-          <div class="works"> 
-            <div class="work wow slideInUp"><a href="">
-                <div class="mockup" style="background-image:url(img/works/32.jpg"></div>
-                <h3 class="namWork wow slideInLeft">32dentalstudio</h3><span class="letter" style="color: rgba(104, 14, 52, 0.9)">3</span></a></div>
-            <div class="work wow slideInUp"><a href="">
-                <div class="mockup" style="background-image:url(img/works/bo.jpg"></div>
-                <h3 class="namWork wow slideInLeft">BOLIGSURF</h3><span class="letter" style="color: rgba(32, 141, 99, 0.9)">b</span></a></div>
-            <div class="work wow slideInUp"><a href="">
-                <div class="mockup" style="background-image:url(img/works/geo.jpg"></div>
-                <h3 class="namWork wow slideInLeft">geo.sa</h3><span class="letter" style="color: rgba(104, 14, 52, 0.9)">g</span></a></div>
-            <div class="work wow slideInUp"><a href="">
-                <div class="mockup" style="background-image:url(img/works/huydong.jpg"></div>
-                <h3 class="namWork wow slideInLeft">huydong.com</h3><span class="letter" style="color: rgba(32, 141, 99, 0.9)">h</span></a></div>
-            <div class="work wow slideInUp"><a href="">
-                <div class="mockup" style="background-image:url(img/works/life.jpg"></div>
-                <h3 class="namWork wow slideInLeft">lifepilllaboratories</h3><span class="letter" style="color: rgba(104, 14, 52, 0.9)">l</span></a></div>
-          </div>
-        </div>
-      </div>
-      <div class="footer footer wow slideInUp">
-        <div class="footer_top">
-          <div class="container"> </div>
-        </div>
-        <div class="footer_bottom">
-          <div class="container"> 
-            <ul> 
-              <li><a href="#top" title="title">Home</a></li>
-              <li><a href="#about" title="title">About</a></li>
-              <li><a href="#works" title="title">Works</a></li>
-              <li><a href="#top" title="title">Top</a></li>
-            </ul>
-            <div class="avatar"><span>Tan</span></div>
-            <p>©2017</p>
+        <div class="wrap_contact">
+          <div class="contact">
+            <div class="contact_top">
+              <div class="btnBack"><span></span></div>
+              <div class="avatar"><span>Tan</span></div>
+            </div>
+            <div class="contact_main">
+              <div class="add"> 
+                <ul>
+                  <li><span class="icon-mail"></span><a href="mailto:daoduytan2212@gmail.com">daoduytan2212@gmail.com</a></li>
+                  <li><span class="icon-skype"></span><a href="skype:daoduytan2212?chat">daoduytan2212</a></li>
+                  <li><span class="icon-phone"></span><a href="tel:+84969 811 549">0969 811 549</a></li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </body><script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="js/wow.min.js"></script>
+  <script src="js/slick.min.js"></script>
   <script src="js/main.js"></script>
 </html>
