--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Jade</title>
+    <title>Dao Duy Tan</title>
     <link href="css/main.css" rel="stylesheet"><link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&amp;subset=latin-ext,vietnamese" rel="stylesheet">
   </head>
   <body>
@@ -43,7 +43,7 @@
               <div class="container"> 
                 <div class="cf">
                   <div class="header_icon"> <span></span><span></span><span></span></div>
-                  <div class="header_btn"><a class="btn" href="#" title="title">Contact me! </a></div>
+                  <div class="header_btn"><a class="btn" href="#" title="title"> <span>Contact me! </span></a></div>
                 </div>
               </div>
             </div>
@@ -113,7 +113,7 @@
                     </div>
                   </div>
                 </div>
-                <div><a class="btn" href="#" title="title">My CV </a></div>
+                <div><a class="btn" href="#" title="title"> <span>My CV </span></a></div>
               </div>
             </div>
           </div>
@@ -128,47 +128,49 @@
                 <div class="work wow slideInUp"><a href="http://32dentalstudio.com" target="_blank">
                     <div class="mockup" style="background-image:url(img/works/32.jpg"></div>
                     <h3 class="namWork wow slideInLeft">32dentalstudio</h3><span class="letter" style="color: rgba(104, 14, 52, 0.9)">3</span></a></div>
-                <div class="work wow slideInUp"><a href="https://boligsurf.dk">
+                <div class="work wow slideInUp"><a href="https://boligsurf.dk" target="_blank">
                     <div class="mockup" style="background-image:url(img/works/bo.jpg"></div>
                     <h3 class="namWork wow slideInLeft">BOLIGSURF</h3><span class="letter" style="color: rgba(32, 141, 99, 0.9)">b</span></a></div>
-                <div class="work wow slideInUp"><a href="http://geo.sa">
+                <div class="work wow slideInUp"><a href="http://geo.sa" target="_blank">
                     <div class="mockup" style="background-image:url(img/works/geo.jpg"></div>
                     <h3 class="namWork wow slideInLeft">geo.sa</h3><span class="letter" style="color: rgba(245, 86, 31, 0.9)">g</span></a></div>
-                <div class="work wow slideInUp"><a href="https://huydong.com">
+                <div class="work wow slideInUp"><a href="https://huydong.com" target="_blank">
                     <div class="mockup" style="background-image:url(img/works/huydong.jpg"></div>
                     <h3 class="namWork wow slideInLeft">huydong.com</h3><span class="letter" style="color: rgba(39, 146, 111, 0.9)">h</span></a></div>
-                <div class="work wow slideInUp"><a href="http://thelifepill.org">
+                <div class="work wow slideInUp"><a href="http://thelifepill.org" target="_blank">
                     <div class="mockup" style="background-image:url(img/works/life.jpg"></div>
                     <h3 class="namWork wow slideInLeft">lifepilllaboratories</h3><span class="letter" style="color: rgba(219, 10, 22, 0.9)">l</span></a></div>
               </div>
             </div>
-            <div class="text-center" style="margin-bottom: 100px"><a class="btn" href="#">View more </a></div>
-            <div class="allWorks"> 
+            <div class="text-center" style="margin-bottom: 200px"><a class="btn" href="#allWorks"> <span>View more </span></a></div>
+            <div class="allWorks" id="allWorks">
               <div class="allWorks_slider">
-                <div class="work-item" style="background-image:url(img/works/huydong.jpg"><a href="http://lntpartners.com" target="_blank"><span>lntpartners.com</span>
+                <div class="work-item" style="background-image:url(img/works/lnt.jpg"><a href="http://lntpartners.com" target="_blank"><span>lntpartners.com</span>
                     <div class="color" style="background: rgba(174, 35, 40, .2)"></div><strong style="color: rgba(174, 35, 40, .9)">l</strong></a></div>
-                <div class="work-item" style="background-image:url(img/works/life.jpg"><a href="http://www.tpauk.com" target="_blank"><span>tpauk.com</span>
+                <div class="work-item" style="background-image:url(img/works/tpauk.jpg"><a href="http://www.tpauk.com" target="_blank"><span>tpauk.com</span>
                     <div class="color" style="background: rgba(0, 103, 102, .2)"></div><strong style="color: rgba(0, 103, 102, .9)">t</strong></a></div>
-                <div class="work-item" style="background-image:url(img/works/geo.jpg"><a href="http://lntpartners.com" target="_blank"><span>sanskritiarts.ca</span>
+                <div class="work-item" style="background-image:url(img/works/sanskriti.jpg"><a href="http://sanskritiarts.ca/" target="_blank"><span>sanskritiarts.ca</span>
                     <div class="color" style="background: rgba(235, 3, 41, .2)"></div><strong style="color: rgba(235, 3, 41, .9)">s</strong></a></div>
-                <div class="work-item"><a href="http://www.totallyguitars.com" target="_blank"><span>totallyguitars.com</span>
-                    <div class="color" style="background: rgba(111, 48, 74, .2)"></div><strong style="color: rgba(11, 48, 74, .9)">t</strong></a></div>
-                <div class="work-item"><a href="http://nafas.org.uk" target="_blank"><span>nafas.org.uk</span>
+                <div class="work-item" style="background-image:url(img/works/bo.jpg"><a href="https://boligsurf.dk" target="_blank"><span>BOLIGSURF</span>
+                    <div class="color" style="background: rgba(32, 141, 99, .2)"></div><strong style="color: rgba(32, 141, 99, .9)">b</strong></a></div>
+                <div class="work-item" style="background-image:url(img/works/life.jpg"><a href="http://thelifepill.org" target="_blank"><span>lifepilllaboratories</span>
+                    <div class="color" style="background: rgba(219, 10, 22, .2)"></div><strong style="color: rgba(219, 10, 22, .9)">l</strong></a></div>
+                <div class="work-item" style="background-image:url(img/works/32.jpg"><a href="http://32dentalstudio.com" target="_blank"><span>32dentalstudio</span>
+                    <div class="color" style="background: rgba(104, 14, 52, .2)"></div><strong style="color: rgba(104, 14, 52, .9)">3</strong></a></div>
+                <div class="work-item" style="background-image:url(img/works/nafas.jpg"><a href="http://nafas.org.uk" target="_blank"><span>nafas.org.uk</span>
                     <div class="color" style="background: rgba(194, 211, 108, .2)"></div><strong style="color: rgba(194, 211, 108, .9)">n</strong></a></div>
-                <div class="work-item"><a href="http://cre8uk.co" target="_blank"><span>cre8uk.co</span>
+                <div class="work-item" style="background-image:url(img/works/cre8uk-s.jpg"><a href="http://cre8uk.co" target="_blank"><span>cre8uk.co</span>
                     <div class="color" style="background: rgba(20, 73, 144, .2)"></div><strong style="color: rgba(20, 73, 144, .9)">c</strong></a></div>
-                <div class="work-item" style="background-image:url(img/works/huydong.jpg"><a href="http://lntpartners.com" target="_blank"><span>lntpartners.com</span>
-                    <div class="color" style="background: rgba(174, 35, 40, .2)"></div><strong style="color: rgba(174, 35, 40, .9)">l</strong></a></div>
-                <div class="work-item" style="background-image:url(img/works/life.jpg"><a href="http://www.tpauk.com" target="_blank"><span>tpauk.com</span>
-                    <div class="color" style="background: rgba(0, 103, 102, .2)"></div><strong style="color: rgba(0, 103, 102, .9)">t</strong></a></div>
-                <div class="work-item" style="background-image:url(img/works/geo.jpg"><a href="http://lntpartners.com" target="_blank"><span>sanskritiarts.ca</span>
-                    <div class="color" style="background: rgba(235, 3, 41, .2)"></div><strong style="color: rgba(235, 3, 41, .9)">s</strong></a></div>
-                <div class="work-item"><a href="http://www.totallyguitars.com" target="_blank"><span>totallyguitars.com</span>
-                    <div class="color" style="background: rgba(111, 48, 74, .2)"></div><strong style="color: rgba(11, 48, 74, .9)">t</strong></a></div>
-                <div class="work-item"><a href="http://nafas.org.uk" target="_blank"><span>nafas.org.uk</span>
-                    <div class="color" style="background: rgba(194, 211, 108, .2)"></div><strong style="color: rgba(194, 211, 108, .9)">n</strong></a></div>
-                <div class="work-item"><a href="http://cre8uk.co" target="_blank"><span>cre8uk.co</span>
-                    <div class="color" style="background: rgba(20, 73, 144, .2)"></div><strong style="color: rgba(20, 73, 144, .9)">c</strong></a></div>
+                <div class="work-item" style="background-image:url(img/works/huydong.jpg"><a href="https://huydong.com" target="_blank"><span>huydong.com</span>
+                    <div class="color" style="background: rgba(139, 146, 111, .2)"></div><strong style="color: rgba(139, 146, 111, .9)">h</strong></a></div>
+                <div class="work-item" style="background-image:url(img/works/geo.jpg"><a href="http://geo.sa" target="_blank"><span>geo.sa</span>
+                    <div class="color" style="background: rgba(245, 86, 31, .2)"></div><strong style="color: rgba(245, 86, 31, .9)">g</strong></a></div>
+                <div class="work-item" style="background-image:url(img/works/wood.jpg"><a href="http://www.biertonandwoods.co.uk/" target="_blank"><span>biertonandwoods.co.uk</span>
+                    <div class="color" style="background: rgba(80, 82, 87, .2)"></div><strong style="color: rgba(80, 82, 87, .9)">b</strong></a></div>
+                <div class="work-item" style="background-image:url(img/works/guitar.jpg"><a href="http://www.totallyguitars.com" target="_blank"><span>totallyguitars.com</span>
+                    <div class="color" style="background: rgba(111, 48, 74, .2)"></div><strong style="color: rgba(111, 48, 74, .9)">t</strong></a></div>
+                <div class="work-item" style="background-image:url(img/works/brain.jpg"><a href="http://www.brainbullet.com" target="_blank"><span>brainbullet</span>
+                    <div class="color" style="background: rgba(255, 174, 0, .2)"></div><strong style="color: rgba(255, 174, 0, .9)">b</strong></a></div>
               </div>
             </div>
           </div>
