--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
     <link href="css/main.css" rel="stylesheet"><link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&amp;subset=latin-ext,vietnamese" rel="stylesheet">
   </head>
   <body>
+    <div class="loading">
+      <div class="line"> 
+        <ul>
+          <li></li>
+          <li></li>
+          <li> </li>
+          <li></li>
+          <li></li>
+          <li> </li>
+          <li></li>
+        </ul>
+      </div>
+      <div class="load">
+        <div class="avatar"><span>Tan</span></div>
+        <div class="load_bar"><span></span></div>
+      </div>
+    </div>
     <div class="wrap">
       <audio id="menuSound" controls="" hidden="hidden"><source src="sound/menu.mp3" type="audio/mpeg"></audio>
       <div class="wrap_inner">
@@ -184,7 +201,6 @@
                   <li><a href="#top" title="title">Home</a></li>
                   <li><a href="#about" title="title">About</a></li>
                   <li><a href="#works" title="title">Works</a></li>
-                  <li><a href="#top" title="title">Top</a></li>
                 </ul>
                 <div class="avatar"><span>Tan</span></div>
                 <p>©2017</p>
