--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
                       <h3>About</h3>
                     </div>
                     <h4>Dao Duy Tan</h4><span>22 - 12 - 1990</span>
+                    <div class="hidden-xs"><a class="btn" href="#" title="title"> <span>My CV </span></a></div>
                   </div>
                   <div class="col col-6 about_right">
                     <div class="about_intro"> 
@@ -130,7 +131,7 @@
                     </div>
                   </div>
                 </div>
-                <div><a class="btn" href="#" title="title"> <span>My CV </span></a></div>
+                <div class="visible-xs"><a class="btn" href="#" title="title"> <span>My CV </span></a></div>
               </div>
             </div>
           </div>
@@ -143,19 +144,19 @@
               </div>
               <div class="works"> 
                 <div class="work wow slideInUp"><a href="http://32dentalstudio.com" target="_blank">
-                    <div class="mockup" style="background-image:url(img/works/32.jpg"></div>
+                    <div class="mockup" style="background-image:url(img/works/32.jpg"><span style="background: rgba(104, 14, 52, 0.2)"></span></div>
                     <h3 class="namWork wow slideInLeft">32dentalstudio</h3><span class="letter" style="color: rgba(104, 14, 52, 0.9)">3</span></a></div>
                 <div class="work wow slideInUp"><a href="https://boligsurf.dk" target="_blank">
-                    <div class="mockup" style="background-image:url(img/works/bo.jpg"></div>
+                    <div class="mockup" style="background-image:url(img/works/bo.jpg"><span style="background: rgba(32, 141, 99, 0.2)"></span></div>
                     <h3 class="namWork wow slideInLeft">BOLIGSURF</h3><span class="letter" style="color: rgba(32, 141, 99, 0.9)">b</span></a></div>
                 <div class="work wow slideInUp"><a href="http://geo.sa" target="_blank">
-                    <div class="mockup" style="background-image:url(img/works/geo.jpg"></div>
+                    <div class="mockup" style="background-image:url(img/works/geo.jpg"><span style="background: rgba(245, 86, 31, 0.2)"></span></div>
                     <h3 class="namWork wow slideInLeft">geo.sa</h3><span class="letter" style="color: rgba(245, 86, 31, 0.9)">g</span></a></div>
                 <div class="work wow slideInUp"><a href="https://huydong.com" target="_blank">
-                    <div class="mockup" style="background-image:url(img/works/huydong.jpg"></div>
+                    <div class="mockup" style="background-image:url(img/works/huydong.jpg"><span style="background: rgba(39, 146, 111, 0.2)"></span></div>
                     <h3 class="namWork wow slideInLeft">huydong.com</h3><span class="letter" style="color: rgba(39, 146, 111, 0.9)">h</span></a></div>
                 <div class="work wow slideInUp"><a href="http://thelifepill.org" target="_blank">
-                    <div class="mockup" style="background-image:url(img/works/life.jpg"></div>
+                    <div class="mockup" style="background-image:url(img/works/life.jpg"><span style="background: rgba(219, 10, 22, 0.2)"></span></div>
                     <h3 class="namWork wow slideInLeft">lifepilllaboratories</h3><span class="letter" style="color: rgba(219, 10, 22, 0.9)">l</span></a></div>
               </div>
             </div>
@@ -229,6 +230,8 @@
     </div>
   </body><script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="js/wow.min.js"></script>
+  <script src="js/TweenMax.min.js"></script>
+  <script src="js/ScrollToPlugin.min.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/main.js"></script>
 </html>
