--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </header>
           <!-- end header-->
           <div id="top"></div>
-          <div class="section banner">
+          <div class="banner">
             <div class="header_bar">
               <div class="container"> 
                 <div class="cf">
@@ -143,19 +143,19 @@
                 <h3>Recent works<br></h3>
               </div>
               <div class="works"> 
-                <div class="work wow slideInUp"><a href="http://32dentalstudio.com" target="_blank">
+                <div class="work"><a href="http://32dentalstudio.com" target="_blank">
                     <div class="mockup" style="background-image:url(img/works/32.jpg"><span style="background: rgba(104, 14, 52, 0.2)"></span></div>
                     <h3 class="namWork wow slideInLeft">32dentalstudio</h3><span class="letter" style="color: rgba(104, 14, 52, 0.9)">3</span></a></div>
-                <div class="work wow slideInUp"><a href="https://boligsurf.dk" target="_blank">
+                <div class="work"><a href="https://boligsurf.dk" target="_blank">
                     <div class="mockup" style="background-image:url(img/works/bo.jpg"><span style="background: rgba(32, 141, 99, 0.2)"></span></div>
                     <h3 class="namWork wow slideInLeft">BOLIGSURF</h3><span class="letter" style="color: rgba(32, 141, 99, 0.9)">b</span></a></div>
-                <div class="work wow slideInUp"><a href="http://geo.sa" target="_blank">
+                <div class="work"><a href="http://geo.sa" target="_blank">
                     <div class="mockup" style="background-image:url(img/works/geo.jpg"><span style="background: rgba(245, 86, 31, 0.2)"></span></div>
                     <h3 class="namWork wow slideInLeft">geo.sa</h3><span class="letter" style="color: rgba(245, 86, 31, 0.9)">g</span></a></div>
-                <div class="work wow slideInUp"><a href="https://huydong.com" target="_blank">
+                <div class="work"><a href="https://huydong.com" target="_blank">
                     <div class="mockup" style="background-image:url(img/works/huydong.jpg"><span style="background: rgba(39, 146, 111, 0.2)"></span></div>
                     <h3 class="namWork wow slideInLeft">huydong.com</h3><span class="letter" style="color: rgba(39, 146, 111, 0.9)">h</span></a></div>
-                <div class="work wow slideInUp"><a href="http://thelifepill.org" target="_blank">
+                <div class="work"><a href="http://thelifepill.org" target="_blank">
                     <div class="mockup" style="background-image:url(img/works/life.jpg"><span style="background: rgba(219, 10, 22, 0.2)"></span></div>
                     <h3 class="namWork wow slideInLeft">lifepilllaboratories</h3><span class="letter" style="color: rgba(219, 10, 22, 0.9)">l</span></a></div>
               </div>
