--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Dao Duy Tan</title>
     <link href="css/main.css" rel="stylesheet"><link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&amp;subset=latin-ext,vietnamese" rel="stylesheet">
+    <script src="js/modernizr-2.8.3.min.js"></script>
   </head>
   <body>
     <div class="loading">
@@ -67,7 +68,7 @@
             <div class="container"> 
               <div class="row">
                 <div class="wrap_text col-6 col">
-                  <div class="text text_1"><span>Tan</span></div>
+                  <div class="text text_1"><span> Tan</span></div>
                   <div class="text text_2"><span>20<span style="color: #06a862">17</span></span></div>
                 </div>
                 <div class="banner_intro col-6 col">
@@ -157,7 +158,7 @@
                     <h3 class="namWork wow slideInLeft">huydong.com</h3><span class="letter" style="color: rgba(39, 146, 111, 0.9)">h</span></a></div>
                 <div class="work"><a href="http://thelifepill.org" target="_blank">
                     <div class="mockup" style="background-image:url(img/works/life.jpg"><span style="background: rgba(219, 10, 22, 0.2)"></span></div>
-                    <h3 class="namWork wow slideInLeft">lifepilllaboratories</h3><span class="letter" style="color: rgba(219, 10, 22, 0.9)">l</span></a></div>
+                    <h3 class="namWork wow slideInLeft">life for life</h3><span class="letter" style="color: rgba(219, 10, 22, 0.9)">l</span></a></div>
               </div>
             </div>
             <div class="text-center" style="margin-bottom: 200px"><a class="btn" href="#allWorks"> <span>View more </span></a></div>
@@ -192,7 +193,7 @@
               </div>
             </div>
           </div>
-          <div class="footer footer wow slideInUp">
+          <div class="footer footer">
             <div class="footer_top">
               <div class="container"> </div>
             </div>
@@ -228,7 +229,7 @@
         </div>
       </div>
     </div>
-  </body><script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  </body><script src="js/jquery.min.js"></script>
   <script src="js/wow.min.js"></script>
   <script src="js/TweenMax.min.js"></script>
   <script src="js/ScrollToPlugin.min.js"></script>
