--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             </div>
             <div class="text-center" style="margin-bottom: 200px"><a class="btn" href="#allWorks"> <span>View more </span></a></div>
             <div class="allWorks" id="allWorks">
-              <div class="allWorks_slider">
+              <div class="allWorks_slider owl-carousel">
                 <div class="work-item" style="background-image:url(img/works/lnt.jpg"><a href="http://lntpartners.com" target="_blank"><span>lntpartners.com</span>
                     <div class="color" style="background: rgba(174, 35, 40, .2)"></div><strong style="color: rgba(174, 35, 40, .9)">l</strong></a></div>
                 <div class="work-item" style="background-image:url(img/works/tpauk.jpg"><a href="http://www.tpauk.com" target="_blank"><span>tpauk.com</span>
@@ -233,6 +233,6 @@
   <script src="js/wow.min.js"></script>
   <script src="js/TweenMax.min.js"></script>
   <script src="js/ScrollToPlugin.min.js"></script>
-  <script src="js/slick.min.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
   <script src="js/main.js"></script>
 </html>
