--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                       <h3>About</h3>
                     </div>
                     <h4>Dao Duy Tan</h4><span>22 - 12 - 1990</span>
-                    <div class="hidden-xs"><a class="btn" href="#" title="title"> <span>My CV </span></a></div>
+                    <div class="hidden-xs"><a class="btn" href="/CV.pdf" title="Download my CV" target="_blank"> <span>My CV </span></a></div>
                   </div>
                   <div class="col col-6 about_right">
                     <div class="about_intro"> 
