--- a/index.html
+++ b/index.html
@@ -141,55 +141,72 @@
           <div class="section works_recent" id="works">
             <div class="container"> 
               <div class="section_title text-center">
-                <h3>Recent works<br></h3>
+                <h3 data-text="Recent works"><span>Recent works<br></span></h3>
               </div>
               <div class="works"> 
-                <div class="work"><a href="http://32dentalstudio.com" target="_blank">
-                    <div class="mockup" style="background-image:url(img/works/32.jpg"><span style="background: rgba(104, 14, 52, 0.2)"></span></div>
-                    <h3 class="namWork wow slideInLeft">32dentalstudio</h3><span class="letter" style="color: rgba(104, 14, 52, 0.9)">3</span></a></div>
+                <div class="work"><a href="https://daoduytan.github.io/london" target="_blank" title="Go to site">
+                    <div class="mockup" style="background-image:url(img/works/london.jpg);"><span style="background: rgba(31, 86, 151, 0.2);"></span></div>
+                    <h3 class="namWork wow slideInLeft">Institute of english</h3><span class="letter" style="color: rgba(31, 86, 151, 0.9);">I</span>
+                    <div class="text-center"> <span>Design + html/css</span></div></a></div>
+                <div class="work"><a href="https://daoduytan.github.io/acocean" target="_blank" title="Go to site">
+                    <div class="mockup" style="background-image:url(img/works/acocean.jpg);"><span style="background: rgba(239, 104, 89, 0.2);"></span></div>
+                    <h3 class="namWork wow slideInLeft">acocean</h3><span class="letter" style="color: rgba(239, 104, 89, 0.9);">A</span>
+                    <div class="text-center"> <span>Design + html/css</span></div></a></div>
+                <div class="work"><a href="https://daoduytan.github.io/kindness" target="_blank" title="Go to site">
+                    <div class="mockup" style="background-image:url(img/works/kindness.jpg);"><span style="background: rgba(216, 67, 64, 0.2);"></span></div>
+                    <h3 class="namWork wow slideInLeft">Kindness</h3><span class="letter" style="color: rgba(216, 67, 64, 0.9);">K</span>
+                    <div class="text-center"> <span>Design + html/css</span></div></a></div>
+                <div class="work"><a href="https://daoduytan.github.io/upbeat-talent" target="_blank" title="Go to site">
+                    <div class="mockup" style="background-image:url(img/works/upbeat-talent.jpg);"><span style="background: rgba(255, 190, 33, 0.2);"></span></div>
+                    <h3 class="namWork wow slideInLeft">Upbeat talent</h3><span class="letter" style="color: rgba(255, 190, 33, 0.9);">T</span>
+                    <div class="text-center"> <span>Design + html/css</span></div></a></div>
+                <div class="work"><a href="http://haiduc.com.vn/bearings/en.html" target="_blank" title="Go to site">
+                    <div class="mockup" style="background-image:url(img/works/haiduc.jpg);"><span style="background: rgba(12, 28, 36, 0.2);"></span></div>
+                    <h3 class="namWork wow slideInLeft">Hai Duc Company</h3><span class="letter" style="color: rgba(12, 28, 36, 0.9);">H</span>
+                    <div class="text-center"> <span>Code html/css</span></div></a></div>
+                <div class="work"><a href="http://32dentalstudio.com" target="_blank" title="Go to site">
+                    <div class="mockup" style="background-image:url(img/works/32.jpg);"><span style="background: rgba(104, 14, 52, 0.2);"></span></div>
+                    <h3 class="namWork wow slideInLeft">32dentalstudio</h3><span class="letter" style="color: rgba(104, 14, 52, 0.9);">3</span>
+                    <div class="text-center"> <span>Code html/css</span></div></a></div>
                 <div class="work"><a href="https://boligsurf.dk" target="_blank">
-                    <div class="mockup" style="background-image:url(img/works/bo.jpg"><span style="background: rgba(32, 141, 99, 0.2)"></span></div>
-                    <h3 class="namWork wow slideInLeft">BOLIGSURF</h3><span class="letter" style="color: rgba(32, 141, 99, 0.9)">b</span></a></div>
-                <div class="work"><a href="http://geo.sa" target="_blank">
-                    <div class="mockup" style="background-image:url(img/works/geo.jpg"><span style="background: rgba(245, 86, 31, 0.2)"></span></div>
-                    <h3 class="namWork wow slideInLeft">geo.sa</h3><span class="letter" style="color: rgba(245, 86, 31, 0.9)">g</span></a></div>
+                    <div class="mockup" style="background-image:url(img/works/bo.jpg);"><span style="background: rgba(32, 141, 99, 0.2);"></span></div>
+                    <h3 class="namWork wow slideInLeft">BOLIGSURF</h3><span class="letter" style="color: rgba(32, 141, 99, 0.9);">b</span>
+                    <div class="text-center"> <span>Code html/css</span></div></a></div>
                 <div class="work"><a href="https://huydong.com" target="_blank">
-                    <div class="mockup" style="background-image:url(img/works/huydong.jpg"><span style="background: rgba(39, 146, 111, 0.2)"></span></div>
-                    <h3 class="namWork wow slideInLeft">huydong.com</h3><span class="letter" style="color: rgba(39, 146, 111, 0.9)">h</span></a></div>
-                <div class="work"><a href="http://thelifepill.org" target="_blank">
-                    <div class="mockup" style="background-image:url(img/works/life.jpg"><span style="background: rgba(219, 10, 22, 0.2)"></span></div>
-                    <h3 class="namWork wow slideInLeft">life for life</h3><span class="letter" style="color: rgba(219, 10, 22, 0.9)">l</span></a></div>
+                    <div class="mockup" style="background-image:url(img/works/huydong.jpg);"><span style="background: rgba(39, 146, 111, 0.2);"></span></div>
+                    <h3 class="namWork wow slideInLeft">huydong.com</h3><span class="letter" style="color: rgba(39, 146, 111, 0.9);">h</span>
+                    <div class="text-center"> <span>Code html/css</span></div></a></div>
               </div>
             </div>
-            <div class="text-center" style="margin-bottom: 200px"><a class="btn" href="#allWorks"> <span>View more </span></a></div>
+            <div class="text-center" style="margin-bottom: 200px;"><a class="btn" href="#allWorks"> <span>View more </span></a></div>
             <div class="allWorks" id="allWorks">
               <div class="allWorks_slider owl-carousel">
-                <div class="work-item" style="background-image:url(img/works/lnt.jpg"><a href="http://lntpartners.com" target="_blank"><span>lntpartners.com</span>
-                    <div class="color" style="background: rgba(174, 35, 40, .2)"></div><strong style="color: rgba(174, 35, 40, .9)">l</strong></a></div>
-                <div class="work-item" style="background-image:url(img/works/tpauk.jpg"><a href="http://www.tpauk.com" target="_blank"><span>tpauk.com</span>
-                    <div class="color" style="background: rgba(0, 103, 102, .2)"></div><strong style="color: rgba(0, 103, 102, .9)">t</strong></a></div>
-                <div class="work-item" style="background-image:url(img/works/sanskriti.jpg"><a href="http://sanskritiarts.ca/" target="_blank"><span>sanskritiarts.ca</span>
-                    <div class="color" style="background: rgba(235, 3, 41, .2)"></div><strong style="color: rgba(235, 3, 41, .9)">s</strong></a></div>
-                <div class="work-item" style="background-image:url(img/works/bo.jpg"><a href="https://boligsurf.dk" target="_blank"><span>BOLIGSURF</span>
-                    <div class="color" style="background: rgba(32, 141, 99, .2)"></div><strong style="color: rgba(32, 141, 99, .9)">b</strong></a></div>
-                <div class="work-item" style="background-image:url(img/works/life.jpg"><a href="http://thelifepill.org" target="_blank"><span>lifepilllaboratories</span>
-                    <div class="color" style="background: rgba(219, 10, 22, .2)"></div><strong style="color: rgba(219, 10, 22, .9)">l</strong></a></div>
-                <div class="work-item" style="background-image:url(img/works/32.jpg"><a href="http://32dentalstudio.com" target="_blank"><span>32dentalstudio</span>
-                    <div class="color" style="background: rgba(104, 14, 52, .2)"></div><strong style="color: rgba(104, 14, 52, .9)">3</strong></a></div>
-                <div class="work-item" style="background-image:url(img/works/nafas.jpg"><a href="http://nafas.org.uk" target="_blank"><span>nafas.org.uk</span>
-                    <div class="color" style="background: rgba(194, 211, 108, .2)"></div><strong style="color: rgba(194, 211, 108, .9)">n</strong></a></div>
-                <div class="work-item" style="background-image:url(img/works/cre8uk-s.jpg"><a href="http://cre8uk.co" target="_blank"><span>cre8uk.co</span>
-                    <div class="color" style="background: rgba(20, 73, 144, .2)"></div><strong style="color: rgba(20, 73, 144, .9)">c</strong></a></div>
-                <div class="work-item" style="background-image:url(img/works/huydong.jpg"><a href="https://huydong.com" target="_blank"><span>huydong.com</span>
-                    <div class="color" style="background: rgba(139, 146, 111, .2)"></div><strong style="color: rgba(139, 146, 111, .9)">h</strong></a></div>
-                <div class="work-item" style="background-image:url(img/works/geo.jpg"><a href="http://geo.sa" target="_blank"><span>geo.sa</span>
-                    <div class="color" style="background: rgba(245, 86, 31, .2)"></div><strong style="color: rgba(245, 86, 31, .9)">g</strong></a></div>
-                <div class="work-item" style="background-image:url(img/works/wood.jpg"><a href="http://www.biertonandwoods.co.uk/" target="_blank"><span>biertonandwoods.co.uk</span>
-                    <div class="color" style="background: rgba(80, 82, 87, .2)"></div><strong style="color: rgba(80, 82, 87, .9)">b</strong></a></div>
-                <div class="work-item" style="background-image:url(img/works/guitar.jpg"><a href="http://www.totallyguitars.com" target="_blank"><span>totallyguitars.com</span>
-                    <div class="color" style="background: rgba(111, 48, 74, .2)"></div><strong style="color: rgba(111, 48, 74, .9)">t</strong></a></div>
-                <div class="work-item" style="background-image:url(img/works/brain.jpg"><a href="http://www.brainbullet.com" target="_blank"><span>brainbullet</span>
-                    <div class="color" style="background: rgba(255, 174, 0, .2)"></div><strong style="color: rgba(255, 174, 0, .9)">b</strong></a></div>
+                <div class="work-item" style="background-image:url(img/works/lnt.jpg);"><a href="http://lntpartners.com" target="_blank"><span>lntpartners.com</span>
+                    <div class="color" style="background: rgba(174, 35, 40, .2);"></div><strong style="color: rgba(174, 35, 40, .9);">l</strong></a></div>
+                <div class="work-item" style="background-image:url(img/works/tpauk.jpg);"><a href="http://www.tpauk.com" target="_blank"><span>tpauk.com</span>
+                    <div class="color" style="background: rgba(0, 103, 102, .2);"></div><strong style="color: rgba(0, 103, 102, .9);">t</strong></a></div>
+                <div class="work-item" style="background-image:url(img/works/sanskriti.jpg);"><a href="http://sanskritiarts.ca/" target="_blank"><span>sanskritiarts.ca</span>
+                    <div class="color" style="background: rgba(235, 3, 41, .2);"></div><strong style="color: rgba(235, 3, 41, .9);">s</strong></a></div>
+                <div class="work-item" style="background-image:url(img/works/bo.jpg);"><a href="https://boligsurf.dk" target="_blank"><span>BOLIGSURF</span>
+                    <div class="color" style="background: rgba(32, 141, 99, .2);"></div><strong style="color: rgba(32, 141, 99, .9);">b</strong></a></div>
+                <div class="work-item" style="background-image:url(img/works/life.jpg);"><a href="http://thelifepill.org" target="_blank"><span>lifepilllaboratories</span>
+                    <div class="color" style="background: rgba(219, 10, 22, .2);"></div><strong style="color: rgba(219, 10, 22, .9);">l</strong></a></div>
+                <div class="work-item" style="background-image:url(img/works/32.jpg);"><a href="http://32dentalstudio.com" target="_blank"><span>32dentalstudio</span>
+                    <div class="color" style="background: rgba(104, 14, 52, .2);"></div><strong style="color: rgba(104, 14, 52, .9);">3</strong></a></div>
+                <div class="work-item" style="background-image:url(img/works/nafas.jpg);"><a href="http://nafas.org.uk" target="_blank"><span>nafas.org.uk</span>
+                    <div class="color" style="background: rgba(194, 211, 108, .2);"></div><strong style="color: rgba(194, 211, 108, .9);">n</strong></a></div>
+                <div class="work-item" style="background-image:url(img/works/cre8uk-s.jpg);"><a href="http://cre8uk.co" target="_blank"><span>cre8uk.co</span>
+                    <div class="color" style="background: rgba(20, 73, 144, .2);"></div><strong style="color: rgba(20, 73, 144, .9);">c</strong></a></div>
+                <div class="work-item" style="background-image:url(img/works/huydong.jpg);"><a href="https://huydong.com" target="_blank"><span>huydong.com</span>
+                    <div class="color" style="background: rgba(139, 146, 111, .2);"></div><strong style="color: rgba(139, 146, 111, .9);">h</strong></a></div>
+                <div class="work-item" style="background-image:url(img/works/geo.jpg);"><a href="http://geo.sa" target="_blank"><span>geo.sa</span>
+                    <div class="color" style="background: rgba(245, 86, 31, .2);"></div><strong style="color: rgba(245, 86, 31, .9);">g</strong></a></div>
+                <div class="work-item" style="background-image:url(img/works/wood.jpg);"><a href="http://www.biertonandwoods.co.uk/" target="_blank"><span>biertonandwoods.co.uk</span>
+                    <div class="color" style="background: rgba(80, 82, 87, .2);"></div><strong style="color: rgba(80, 82, 87, .9);">b</strong></a></div>
+                <div class="work-item" style="background-image:url(img/works/guitar.jpg);"><a href="http://www.totallyguitars.com" target="_blank"><span>totallyguitars.com</span>
+                    <div class="color" style="background: rgba(111, 48, 74, .2);"></div><strong style="color: rgba(111, 48, 74, .9);">t</strong></a></div>
+                <div class="work-item" style="background-image:url(img/works/brain.jpg);"><a href="http://www.brainbullet.com" target="_blank"><span>brainbullet</span>
+                    <div class="color" style="background: rgba(255, 174, 0, .2);"></div><strong style="color: rgba(255, 174, 0, .9);">b</strong></a></div>
               </div>
             </div>
           </div>
