--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <div class="down wow slideInUp"><img src="img/btn-scroll-arrow.svg" alt=""></div>
           <div class="section about" id="about">
             <div class="container"> 
-              <div class="about_inner wow slideInUp">
+              <div class="about_inner">
                 <div class="cirle"></div>
                 <div class="row"> 
                   <div class="col col-6 about_left">
