--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Dao Duy Tan</title>
-    <link href="css/main.css" rel="stylesheet"><link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&amp;subset=latin-ext,vietnamese" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
     <script src="js/modernizr-2.8.3.min.js"></script>
   </head>
   <body>
@@ -247,9 +247,8 @@
       </div>
     </div>
   </body><script src="js/jquery.min.js"></script>
-  <script src="js/wow.min.js"></script>
   <script src="js/TweenMax.min.js"></script>
   <script src="js/ScrollToPlugin.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/libs.js"></script>
   <script src="js/main.js"></script>
 </html>
