--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Dao Duy Tan</title>
     <link href="css/main.css" rel="stylesheet">
     <script src="js/modernizr-2.8.3.min.js"></script>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-71803242-1', 'auto');
+      ga('send', 'pageview');
+    </script>
   </head>
   <body>
     <div class="loading">
@@ -249,6 +259,6 @@
   </body><script src="js/jquery.min.js"></script>
   <script src="js/TweenMax.min.js"></script>
   <script src="js/ScrollToPlugin.min.js"></script>
-  <script src="js/libs.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/libs.js" async></script>
+  <script src="js/main.js" async></script>
 </html>
