--- a/index.html
+++ b/index.html
@@ -6,16 +6,6 @@
     <title>Dao Duy Tan</title>
     <link href="css/main.css" rel="stylesheet">
     <script src="js/modernizr-2.8.3.min.js"></script>
-
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-71803242-1', 'auto');
-      ga('send', 'pageview');
-    </script>
   </head>
   <body>
     <div class="loading">
@@ -31,12 +21,14 @@
         </ul>
       </div>
       <div class="load">
-        <div class="avatar"><span>Tan</span></div>
-        <div class="load_bar"><span></span></div>
+        <div class="h3"> 
+          <div class="text"><strong>T</strong><strong>a</strong><strong>n</strong></div><span>Tan</span>
+        </div>
       </div>
     </div>
     <div class="wrap">
       <audio id="menuSound" controls="" hidden="hidden"><source src="sound/menu.mp3" type="audio/mpeg"></audio>
+      <audio id="Sound" controls="" hidden="hidden"><source src="sound/vermont-music-short.mp3" type="audio/mpeg" ></audio>
       <div class="wrap_inner">
         <div class="wrap_home">
           <div class="line"> 
@@ -160,7 +152,7 @@
                     <div class="text-center"> <span>Design + html/css</span></div></a></div>
                 <div class="work"><a href="https://daoduytan.github.io/acocean" target="_blank" title="Go to site">
                     <div class="mockup" style="background-image:url(img/works/acocean.jpg);"><span style="background: rgba(239, 104, 89, 0.2);"></span></div>
-                    <h3 class="namWork wow slideInLeft">acocean</h3><span class="letter" style="color: rgba(239, 104, 89, 0.9);">A</span>
+                    <h3 class="namWork wow slideInRight">acocean</h3><span class="letter" style="color: rgba(239, 104, 89, 0.9);">A</span>
                     <div class="text-center"> <span>Design + html/css</span></div></a></div>
                 <div class="work"><a href="https://daoduytan.github.io/kindness" target="_blank" title="Go to site">
                     <div class="mockup" style="background-image:url(img/works/kindness.jpg);"><span style="background: rgba(216, 67, 64, 0.2);"></span></div>
@@ -168,7 +160,7 @@
                     <div class="text-center"> <span>Design + html/css</span></div></a></div>
                 <div class="work"><a href="https://daoduytan.github.io/upbeat-talent" target="_blank" title="Go to site">
                     <div class="mockup" style="background-image:url(img/works/upbeat-talent.jpg);"><span style="background: rgba(255, 190, 33, 0.2);"></span></div>
-                    <h3 class="namWork wow slideInLeft">Upbeat talent</h3><span class="letter" style="color: rgba(255, 190, 33, 0.9);">T</span>
+                    <h3 class="namWork wow slideInRight">Upbeat talent</h3><span class="letter" style="color: rgba(255, 190, 33, 0.9);">T</span>
                     <div class="text-center"> <span>Design + html/css</span></div></a></div>
                 <div class="work"><a href="http://haiduc.com.vn/bearings/en.html" target="_blank" title="Go to site">
                     <div class="mockup" style="background-image:url(img/works/haiduc.jpg);"><span style="background: rgba(12, 28, 36, 0.2);"></span></div>
@@ -176,7 +168,7 @@
                     <div class="text-center"> <span>Code html/css</span></div></a></div>
                 <div class="work"><a href="http://32dentalstudio.com" target="_blank" title="Go to site">
                     <div class="mockup" style="background-image:url(img/works/32.jpg);"><span style="background: rgba(104, 14, 52, 0.2);"></span></div>
-                    <h3 class="namWork wow slideInLeft">32dentalstudio</h3><span class="letter" style="color: rgba(104, 14, 52, 0.9);">3</span>
+                    <h3 class="namWork wow slideInRight">32dentalstudio</h3><span class="letter" style="color: rgba(104, 14, 52, 0.9);">3</span>
                     <div class="text-center"> <span>Code html/css</span></div></a></div>
                 <div class="work"><a href="https://boligsurf.dk" target="_blank">
                     <div class="mockup" style="background-image:url(img/works/bo.jpg);"><span style="background: rgba(32, 141, 99, 0.2);"></span></div>
@@ -184,7 +176,7 @@
                     <div class="text-center"> <span>Code html/css</span></div></a></div>
                 <div class="work"><a href="https://huydong.com" target="_blank">
                     <div class="mockup" style="background-image:url(img/works/huydong.jpg);"><span style="background: rgba(39, 146, 111, 0.2);"></span></div>
-                    <h3 class="namWork wow slideInLeft">huydong.com</h3><span class="letter" style="color: rgba(39, 146, 111, 0.9);">h</span>
+                    <h3 class="namWork wow slideInRight">huydong.com</h3><span class="letter" style="color: rgba(39, 146, 111, 0.9);">h</span>
                     <div class="text-center"> <span>Code html/css</span></div></a></div>
               </div>
             </div>
@@ -259,6 +251,6 @@
   </body><script src="js/jquery.min.js"></script>
   <script src="js/TweenMax.min.js"></script>
   <script src="js/ScrollToPlugin.min.js"></script>
-  <script src="js/libs.js" async></script>
-  <script src="js/main.js" async></script>
+  <script src="js/libs.js"></script>
+  <script src="js/main.js"></script>
 </html>
